--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0", 
+    "antd": "^5.20.6"
   },
   "devDependencies": {
     "@types/node": "^20",
