--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@types/three": "^0.173.0",
     "antd": "^5.20.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.439.0",
-    "next": "14.2.7",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-markdown": "^10.0.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@types/node": "^20",
